--- a/subgraph.template.yaml
+++ b/subgraph.template.yaml
@@ -4,12 +4,12 @@ schema:
   file: ./schema.graphql
 dataSources:
   - kind: ethereum/contract
-    name: GnosisSafeProxyFactory
+    name: GnosisSafeProxyFactory_v1_1_1
     network: {{network}}
     source:
-      address: '{{factory.addr}}'
+      address: '{{factory.v1_1_1.addr}}'
       abi: GnosisSafeProxyFactory
-      startBlock: {{factory.birthBlock}}
+      startBlock: {{factory.v1_1_1.birthBlock}}
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
@@ -19,12 +19,35 @@ dataSources:
         - Wallet
       abis:
         - name: GnosisSafeProxyFactory
-          file: ./abis/GnosisSafeProxyFactory.json
+          file: ./abis/GnosisSafeProxyFactory_v1.1.1.json
         - name: GnosisSafe
           file: ./abis/GnosisSafe.json
       eventHandlers:
         - event: ProxyCreation(address)
-          handler: handleProxyCreation
+          handler: handleProxyCreation_1_1_1
+
+  - kind: ethereum/contract
+    name: GnosisSafeProxyFactory_v1_3_0
+    network: {{network}}
+    source:
+      address: '{{factory.v1_3_0.addr}}'
+      abi: GnosisSafeProxyFactory
+      startBlock: {{factory.v1_3_0.birthBlock}}
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      file: ./src/factory.ts
+      entities:
+        - Wallet
+      abis:
+        - name: GnosisSafeProxyFactory
+          file: ./abis/GnosisSafeProxyFactory_v1.3.0.json
+        - name: GnosisSafe
+          file: ./abis/GnosisSafe.json
+      eventHandlers:
+        - event: ProxyCreation(address,address)
+          handler: handleProxyCreation_1_3_0
 
 templates:
   - kind: ethereum/contract
