Support for kovan, mumbai and polygon (matic) Add version in the schema (wallet)

--- a/package.json
+++ b/package.json
@@ -7,9 +7,15 @@
     "prepare:mainnet": "mustache config/mainnet.json subgraph.template.yaml > subgraph.yaml",
     "prepare:rinkeby": "mustache config/rinkeby.json subgraph.template.yaml > subgraph.yaml",
     "prepare:ropsten": "mustache config/ropsten.json subgraph.template.yaml > subgraph.yaml",
+    "prepare:kovan": "mustache config/kovan.json subgraph.template.yaml > subgraph.yaml",
+    "prepare:polygon": "mustache config/polygon.json subgraph-L2.template.yaml > subgraph.yaml",
+    "prepare:mumbai": "mustache config/mumbai.json subgraph-L2.template.yaml > subgraph.yaml",
     "deploy:mainnet": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ gjeanmart/gnosis-safe-mainnet",
     "deploy:rinkeby": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ gjeanmart/gnosis-safe-rinkeby",
     "deploy:ropsten": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ gjeanmart/gnosis-safe-ropsten",
+    "deploy:kovan": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ gjeanmart/gnosis-safe-kovan",
+    "deploy:polygon": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ gjeanmart/gnosis-safe-polygon",
+    "deploy:mumbai": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ gjeanmart/gnosis-safe-mumbai",
     "create-local": "graph create --node http://localhost:8020/ gjeanmart/gnosis-safe",
     "remove-local": "graph remove --node http://localhost:8020/ gjeanmart/gnosis-safe",
     "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 gjeanmart/gnosis-safe"
