--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 gjeanmart/gnosis-safe"
   },
   "dependencies": {
-    "@graphprotocol/graph-cli": "^0.33.0",
-    "@graphprotocol/graph-ts": "^0.27.0"
+    "@graphprotocol/graph-cli": "0.47.0",
+    "@graphprotocol/graph-ts": "^0.29.3",
+    "typescript": "^5.0.4"
   },
   "devDependencies": {
-    "mustache": "^3.1.0"
+    "matchstick-as": "0.5.0",
+    "mustache": "^4.2.0"
   }
 }
